Enhanced: Definition and pronunciation lookup; Display of definition; Colorized display of test results and messages; Command line arguments; Project help; Offline file size check; Error logging

--- a/spelling-bee/project_setup.cfg
+++ b/spelling-bee/project_setup.cfg
@@ -1,3 +1,28 @@
 # set shortcuts
 export PROJ=$(pwd)
 export DATA=$PROJ/data
+
+# set aliases
+#alias sbp="ksh spelling_bee.ksh practice 2016"
+#alias sbt="ksh spelling_bee.ksh test 2016"
+
+alias sbs="sudo python spelling_bee.py study"
+alias sbp="sudo python spelling_bee.py practice"
+alias sbt="sudo python spelling_bee.py test"
+
+# define functions
+
+# function to display help
+help() {
+    echo "Spelling Bee instructions:"
+    echo "To study   : sbs 2016 word lary-frees"
+    echo "To practice: sbp 2016-latin word lary-frees"
+    echo "To test    : sbt 2016-asian-languages-challenge chapter 1"
+    echo ""
+    echo "Lists available:"
+    ls -1 data/spelling_bee_*.txt | cut -d _ -f 3 | cut -d . -f 1 | column -x
+    echo ""    
+}
+
+# display instructions
+help
