Enhanced: columnize function; Added: saving of test results and practice words

--- a/spelling-bee/project_setup.cfg
+++ b/spelling-bee/project_setup.cfg
@@ -19,8 +19,14 @@ help() {
     echo "To practice: sbp 2016-latin word lary-frees"
     echo "To test    : sbt 2016-asian-languages-challenge chapter 1"
     echo ""
-    echo "Lists available:"
-    ls -1 data/spelling_bee_*.txt | cut -d _ -f 3 | cut -d . -f 1 | column -x
+    echo "Word lists:"
+    ls -1 data/spelling_bee_*.txt | egrep -v "challenge|practice" | cut -d _ -f 3 | cut -d . -f 1 | column -x
+    echo ""    
+    echo "Challenge word lists:"
+    ls -1 data/spelling_bee_*-challenge.txt | cut -d _ -f 3 | cut -d . -f 1 | column -x
+    echo ""    
+    echo "Practice word lists:"
+    ls -1 data/spelling_bee_*-practice.txt | cut -d _ -f 3 | cut -d . -f 1 | column -x
     echo ""    
 }
 
