Added: Wild card support for lists; Enhanced: Naming and saving of practice lists for tests

--- a/spelling-bee/project_setup.cfg
+++ b/spelling-bee/project_setup.cfg
@@ -20,13 +20,13 @@ help() {
     echo "To test    : sbt 2016-asian-languages-challenge chapter 1"
     echo ""
     echo "Word lists:"
-    ls -1 data/spelling_bee_*.txt | egrep -v "challenge|practice" | cut -d _ -f 3 | cut -d . -f 1 | column -x
+    ls -1 data/spelling_bee_*.txt | egrep -v "challenge|practice" | sed 's/^.*spelling_bee_//g' | sed 's/.txt//g' | column -x
     echo ""    
     echo "Challenge word lists:"
-    ls -1 data/spelling_bee_*-challenge.txt | cut -d _ -f 3 | cut -d . -f 1 | column -x
+    ls -1 data/spelling_bee_*-challenge.txt | egrep -v "practice" | sed 's/^.*spelling_bee_//g' | sed 's/.txt//g' | column -x
     echo ""    
     echo "Practice word lists:"
-    ls -1 data/spelling_bee_*-practice.txt | cut -d _ -f 3 | cut -d . -f 1 | column -x
+    ls -1 data/spelling_bee_practice_*.txt | sed 's/^.*spelling_bee_//g' | sed 's/.txt//g' | column -x
     echo ""    
 }
 
