Added: Revision mode

--- a/spelling-bee/project_setup.cfg
+++ b/spelling-bee/project_setup.cfg
@@ -9,15 +9,17 @@ export DATA=$PROJ/data
 alias sbs="sudo python spelling_bee.py study"
 alias sbp="sudo python spelling_bee.py practice"
 alias sbt="sudo python spelling_bee.py test"
+alias sbt="sudo python spelling_bee.py revise"
 
 # define functions
 
 # function to display help
 help() {
     echo "Spelling Bee instructions:"
-    echo "To study   : sbs 2016 word lary-frees"
-    echo "To practice: sbp 2016-latin word lary-frees"
-    echo "To test    : sbt 2016-asian-languages-challenge chapter 1"
+    echo "To study   : sbs 2016-000-basic word lary-frees"
+    echo "To practice: sbp 2016-001-latin-basic word lary-frees"
+    echo "To test    : sbt 2016-003-asian-languages-challenge chapter 1"
+    echo "To revise  : sbr 2016-001-latin-challenge chapter 1"
     echo ""
     echo "Word lists:"
     ls -1 data/spelling_bee_*.txt | egrep -v "challenge|practice" | sed 's/^.*spelling_bee_//g' | sed 's/.txt//g' | column -x
