Corrected: Alias for revision mode

--- a/spelling-bee/project_setup.cfg
+++ b/spelling-bee/project_setup.cfg
@@ -9,7 +9,7 @@ export DATA=$PROJ/data
 alias sbs="sudo python spelling_bee.py study"
 alias sbp="sudo python spelling_bee.py practice"
 alias sbt="sudo python spelling_bee.py test"
-alias sbt="sudo python spelling_bee.py revise"
+alias sbr="sudo python spelling_bee.py revise"
 
 # define functions
 
