Enhanced: Alternate dictionary sources; Added: Dictionary lookup function from command line using define

--- a/spelling-bee/project_setup.cfg
+++ b/spelling-bee/project_setup.cfg
@@ -11,6 +11,8 @@ alias sbp="sudo python spelling_bee.py practice"
 alias sbt="sudo python spelling_bee.py test"
 alias sbr="sudo python spelling_bee.py revise"
 
+alias define="sudo python dictionary_lookup.py"
+
 # define functions
 
 # function to display help
