Enhanced: Fully qualified executables in aliases and functions

--- a/spelling-bee/project_setup.cfg
+++ b/spelling-bee/project_setup.cfg
@@ -6,12 +6,12 @@ export DATA=$PROJ/data
 #alias sbp="ksh spelling_bee.ksh practice 2016"
 #alias sbt="ksh spelling_bee.ksh test 2016"
 
-alias sbs="sudo python spelling_bee.py study"
-alias sbp="sudo python spelling_bee.py practice"
-alias sbt="sudo python spelling_bee.py test"
-alias sbr="sudo python spelling_bee.py revise"
+alias sbs="sudo python $PROJ/spelling_bee.py study"
+alias sbp="sudo python $PROJ/spelling_bee.py practice"
+alias sbt="sudo python $PROJ/spelling_bee.py test"
+alias sbr="sudo python $PROJ/spelling_bee.py revise"
 
-alias define="sudo python dictionary_lookup.py"
+alias define="sudo python $PROJ/dictionary_lookup.py"
 
 # define functions
 
@@ -24,13 +24,13 @@ help() {
     echo "To revise  : sbr 2016-001-latin-challenge chapter 1"
     echo ""
     echo "Word lists:"
-    ls -1 data/spelling_bee_*.txt | egrep -v "challenge|practice" | sed 's/^.*spelling_bee_//g' | sed 's/.txt//g' | column -x
+    ls -1 $DATA/spelling_bee_*.txt | egrep -v "challenge|practice" | sed 's/^.*spelling_bee_//g' | sed 's/.txt//g' | column -x
     echo ""    
     echo "Challenge word lists:"
-    ls -1 data/spelling_bee_*-challenge.txt | egrep -v "practice" | sed 's/^.*spelling_bee_//g' | sed 's/.txt//g' | column -x
+    ls -1 $DATA/spelling_bee_*-challenge.txt | egrep -v "practice" | sed 's/^.*spelling_bee_//g' | sed 's/.txt//g' | column -x
     echo ""    
     echo "Practice word lists:"
-    ls -1 data/spelling_bee_practice_*.txt | sed 's/^.*spelling_bee_//g' | sed 's/.txt//g' | column -x
+    ls -1 $DATA/spelling_bee_practice_*.txt | sed 's/^.*spelling_bee_//g' | sed 's/.txt//g' | column -x
     echo ""    
 }
 
