Enhanced: Resolution of project and execution directory

--- a/spelling-bee/project_setup.cfg
+++ b/spelling-bee/project_setup.cfg
@@ -6,12 +6,12 @@ export DATA=$PROJ/data
 #alias sbp="ksh spelling_bee.ksh practice 2016"
 #alias sbt="ksh spelling_bee.ksh test 2016"
 
-alias sbs="sudo python $PROJ/spelling_bee.py study"
-alias sbp="sudo python $PROJ/spelling_bee.py practice"
-alias sbt="sudo python $PROJ/spelling_bee.py test"
-alias sbr="sudo python $PROJ/spelling_bee.py revise"
+alias sbs="cd $PROJ; sudo python $PROJ/spelling_bee.py study"
+alias sbp="cd $PROJ; sudo python $PROJ/spelling_bee.py practice"
+alias sbt="cd $PROJ; sudo python $PROJ/spelling_bee.py test"
+alias sbr="cd $PROJ; sudo python $PROJ/spelling_bee.py revise"
 
-alias define="sudo python $PROJ/dictionary_lookup.py"
+alias define="cd $PROJ; sudo python $PROJ/dictionary_lookup.py"
 
 # define functions
 
