--- a/spelling-bee/project_setup.cfg
+++ b/spelling-bee/project_setup.cfg
@@ -1,10 +1,11 @@
 # set shortcuts
 export PROJ=$(pwd)
 export DATA=$PROJ/data
+export YEAR=2017
 
 # set aliases
-#alias sbp="ksh spelling_bee.ksh practice 2016"
-#alias sbt="ksh spelling_bee.ksh test 2016"
+#alias sbp="ksh spelling_bee.ksh practice ${YEAR}"
+#alias sbt="ksh spelling_bee.ksh test ${YEAR}"
 
 alias sbs="cd $PROJ; sudo python $PROJ/spelling_bee.py study"
 alias sbp="cd $PROJ; sudo python $PROJ/spelling_bee.py practice"
@@ -18,20 +19,32 @@ alias define="cd $PROJ; sudo python $PROJ/dictionary_lookup.py"
 # function to display help
 help() {
     echo "Spelling Bee instructions:"
-    echo "To study   : sbs 2016-000-basic word lary-frees"
-    echo "To practice: sbp 2016-001-latin-basic word lary-frees"
-    echo "To test    : sbt 2016-003-asian-languages-challenge chapter 1"
-    echo "To revise  : sbr 2016-001-latin-challenge chapter 1"
+    echo "To study   : sbs ${YEAR}-000-basic word lary-frees"
+    echo "To practice: sbp ${YEAR}-001-latin-basic word lary-frees"
+    echo "To test    : sbt ${YEAR}-003-asian-languages-challenge chapter 1"
+    echo "To revise  : sbr ${YEAR}-001-latin-challenge chapter 1"
     echo ""
-    echo "Word lists:"
-    ls -1 $DATA/spelling_bee_*.txt | egrep -v "challenge|practice" | sed 's/^.*spelling_bee_//g' | sed 's/.txt//g' | column -x
-    echo ""    
-    echo "Challenge word lists:"
-    ls -1 $DATA/spelling_bee_*-challenge.txt | egrep -v "practice" | sed 's/^.*spelling_bee_//g' | sed 's/.txt//g' | column -x
-    echo ""    
-    echo "Practice word lists:"
-    ls -1 $DATA/spelling_bee_practice_*.txt | sed 's/^.*spelling_bee_//g' | sed 's/.txt//g' | column -x
-    echo ""    
+
+    listcount=$(ls -1 $DATA/spelling_bee_${YEAR}*.txt 2>/dev/null | wc -l)
+    if [[ $listcount -gt 0 ]]; then
+        echo "Word lists:"
+        ls -1 $DATA/spelling_bee_${YEAR}*.txt | egrep -v "challenge|practice" | sed 's/^.*spelling_bee_//g' | sed 's/.txt//g' | column -x
+        echo ""    
+    fi    
+    
+    listcount=$(ls -1 $DATA/spelling_bee_${YEAR}*-challenge.txt 2>/dev/null | wc -l)
+    if [[ $listcount -gt 0 ]]; then
+        echo "Challenge word lists:"
+        ls -1 $DATA/spelling_bee_${YEAR}*-challenge.txt | egrep -v "practice" | sed 's/^.*spelling_bee_//g' | sed 's/.txt//g' | column -x
+        echo ""
+    fi
+    
+    listcount=$(ls -1 $DATA/spelling_bee_practice_${YEAR}*.txt 2>/dev/null | wc -l)
+    if [[ $listcount -gt 0 ]]; then
+        echo "Practice word lists:"
+        ls -1 $DATA/spelling_bee_practice_${YEAR}*.txt | sed 's/^.*spelling_bee_//g' | sed 's/.txt//g' | column -x
+        echo ""
+    fi
 }
 
 # display instructions
