--- a/spelling-bee/project_setup.cfg
+++ b/spelling-bee/project_setup.cfg
@@ -11,6 +11,7 @@ alias sbs="cd $PROJ; sudo python $PROJ/spelling_bee.py study"
 alias sbp="cd $PROJ; sudo python $PROJ/spelling_bee.py practice"
 alias sbt="cd $PROJ; sudo python $PROJ/spelling_bee.py test"
 alias sbr="cd $PROJ; sudo python $PROJ/spelling_bee.py revise"
+alias sbe="cd $PROJ; sudo python $PROJ/spelling_bee.py scan"
 
 alias define="cd $PROJ; sudo python $PROJ/dictionary_lookup.py"
 
@@ -23,11 +24,19 @@ help() {
     echo "To practice: sbp ${YEAR}-001-latin-basic word lary-frees"
     echo "To test    : sbt ${YEAR}-003-asian-languages-challenge chapter 1"
     echo "To revise  : sbr ${YEAR}-001-latin-challenge chapter 1"
+    echo "To scan    : sbe ${YEAR}-001-latin-challenge"
     echo ""
 
     listcount=$(ls -1 $DATA/spelling_bee_${YEAR}*.txt 2>/dev/null | wc -l)
     if [[ $listcount -gt 0 ]]; then
         echo "Word lists:"
+        ls -1 $DATA/spelling_bee_2016*.txt | egrep -v "challenge|practice" | sed 's/^.*spelling_bee_//g' | sed 's/.txt//g' | column -x
+        echo ""
+        ls -1 $DATA/spelling_bee_2016*-challenge.txt | egrep -v "practice" | sed 's/^.*spelling_bee_//g' | sed 's/.txt//g' | column -x
+        echo ""
+        ls -1 $DATA/spelling_bee_practice_2016*.txt | sed 's/^.*spelling_bee_//g' | sed 's/.txt//g' | column -x
+        echo ""
+        echo ""
         ls -1 $DATA/spelling_bee_${YEAR}*.txt | egrep -v "challenge|practice" | sed 's/^.*spelling_bee_//g' | sed 's/.txt//g' | column -x
         echo ""    
     fi    
