Cleaned up project_setup; Re-organized test/revision word lists

--- a/spelling-bee/project_setup.cfg
+++ b/spelling-bee/project_setup.cfg
@@ -4,9 +4,6 @@ export DATA=$PROJ/data
 export YEAR=2017
 
 # set aliases
-#alias sbp="ksh spelling_bee.ksh practice ${YEAR}"
-#alias sbt="ksh spelling_bee.ksh test ${YEAR}"
-
 alias sbs="cd $PROJ; sudo python $PROJ/spelling_bee.py study"
 alias sbp="cd $PROJ; sudo python $PROJ/spelling_bee.py practice"
 alias sbt="cd $PROJ; sudo python $PROJ/spelling_bee.py test"
@@ -20,40 +17,51 @@ alias define="cd $PROJ; sudo python $PROJ/dictionary_lookup.py"
 # function to display help
 help() {
     echo "Spelling Bee instructions:"
-    echo "To study   : sbs ${YEAR}-000-basic word lary-frees"
-    echo "To practice: sbp ${YEAR}-001-latin-basic word lary-frees"
-    echo "To test    : sbt ${YEAR}-003-asian-languages-challenge chapter 1"
-    echo "To revise  : sbr ${YEAR}-001-latin-challenge chapter 1"
-    echo "To scan    : sbe ${YEAR}-001-latin-challenge"
+    echo "To study   : sbs ${YEAR}-scr-local-001-grade-1-8 word lary-frees"
+    echo "To practice: sbp ${YEAR}-scr-region-001-latin-basic word lary-frees"
+    echo "To test    : sbt ${YEAR}-scr-region-003-asian-languages-challenge chapter 1"
+    echo "To revise  : sbr ${YEAR}-scr-region-001-latin-challenge random 50"
+    echo "To scan    : sbe ${YEAR}-scr-region-001-latin-challenge"
+    echo ""
+
+    echo "=========================================="
+    echo "Word lists for year ${YEAR}"
+    echo "=========================================="
     echo ""
 
     listcount=$(ls -1 $DATA/spelling_bee_${YEAR}*.txt 2>/dev/null | wc -l)
     if [[ $listcount -gt 0 ]]; then
         echo "Word lists:"
-        ls -1 $DATA/spelling_bee_2016*.txt | egrep -v "challenge|practice" | sed 's/^.*spelling_bee_//g' | sed 's/.txt//g' | column -x
-        echo ""
-        ls -1 $DATA/spelling_bee_2016*-challenge.txt | egrep -v "practice" | sed 's/^.*spelling_bee_//g' | sed 's/.txt//g' | column -x
-        echo ""
-        ls -1 $DATA/spelling_bee_practice_2016*.txt | sed 's/^.*spelling_bee_//g' | sed 's/.txt//g' | column -x
-        echo ""
-        echo ""
-        ls -1 $DATA/spelling_bee_${YEAR}*.txt | egrep -v "challenge|practice" | sed 's/^.*spelling_bee_//g' | sed 's/.txt//g' | column -x
+        ls -1 $DATA/spelling_bee_${YEAR}*.txt | egrep -v "challenge" | sed 's/^.*spelling_bee_//g' | sed 's/.txt//g' | column -x
         echo ""    
     fi    
     
     listcount=$(ls -1 $DATA/spelling_bee_${YEAR}*-challenge.txt 2>/dev/null | wc -l)
     if [[ $listcount -gt 0 ]]; then
         echo "Challenge word lists:"
-        ls -1 $DATA/spelling_bee_${YEAR}*-challenge.txt | egrep -v "practice" | sed 's/^.*spelling_bee_//g' | sed 's/.txt//g' | column -x
+        ls -1 $DATA/spelling_bee_${YEAR}*-challenge.txt | sed 's/^.*spelling_bee_//g' | sed 's/.txt//g' | column -x
         echo ""
     fi
     
-    listcount=$(ls -1 $DATA/spelling_bee_practice_${YEAR}*.txt 2>/dev/null | wc -l)
+    listcount=$(ls -1 $DATA/study/spelling_bee_practice_${YEAR}*.txt 2>/dev/null | wc -l)
     if [[ $listcount -gt 0 ]]; then
         echo "Practice word lists:"
-        ls -1 $DATA/spelling_bee_practice_${YEAR}*.txt | sed 's/^.*spelling_bee_//g' | sed 's/.txt//g' | column -x
+        ls -1 $DATA/study/spelling_bee_practice_${YEAR}*.txt | sed 's/^.*spelling_bee_//g' | sed 's/.txt//g' | column -x
         echo ""
     fi
+
+    echo "=========================================="
+    echo "Word lists for year 2016"
+    echo "=========================================="
+    echo ""
+
+    echo "Word lists:"
+    ls -1 $DATA/spelling_bee_2016*.txt | sed 's/^.*spelling_bee_//g' | sed 's/.txt//g' | column -x
+    echo ""
+    echo "Practice word lists:"
+    ls -1 $DATA/study/spelling_bee_practice_2016*.txt | sed 's/^.*spelling_bee_//g' | sed 's/.txt//g' | column -x
+    echo ""
+
 }
 
 # display instructions
