Enhanced display of word lists by year

--- a/spelling-bee/project_setup.cfg
+++ b/spelling-bee/project_setup.cfg
@@ -1,7 +1,7 @@
 # set shortcuts
 export PROJ=$(pwd)
 export DATA=$PROJ/data
-export YEAR=2017
+export YEAR=2018
 
 # set aliases
 alias sbs="cd $PROJ; sudo python $PROJ/spelling_bee.py study"
@@ -14,54 +14,53 @@ alias define="cd $PROJ; sudo python $PROJ/dictionary_lookup.py"
 
 # define functions
 
+# function to print word list for a year
+printlist() {
+    printyear=$1
+
+    echo "=========================================="
+    echo "Word lists for year ${printyear}"
+    echo "=========================================="
+    echo ""
+
+    listcount=$(ls -1 $DATA/spelling_bee_${printyear}*.txt 2>/dev/null | wc -l)
+    if [[ $listcount -gt 0 ]]; then
+        echo "Word lists:"
+        ls -1 $DATA/spelling_bee_${printyear}*.txt | egrep -v "challenge" | sed 's/^.*spelling_bee_//g' | sed 's/.txt//g' | column -x
+        echo ""    
+    fi    
+    
+    listcount=$(ls -1 $DATA/spelling_bee_${printyear}*-challenge.txt 2>/dev/null | wc -l)
+    if [[ $listcount -gt 0 ]]; then
+        echo "Challenge word lists:"
+        ls -1 $DATA/spelling_bee_${printyear}*-challenge.txt | sed 's/^.*spelling_bee_//g' | sed 's/.txt//g' | column -x
+        echo ""
+    fi
+    
+    listcount=$(ls -1 $DATA/study/spelling_bee_practice_${printyear}*.txt 2>/dev/null | wc -l)
+    if [[ $listcount -gt 0 ]]; then
+        echo "Practice word lists:"
+        ls -1 $DATA/study/spelling_bee_practice_${printyear}*.txt | sed 's/^.*spelling_bee_//g' | sed 's/.txt//g' | column -x
+        echo ""
+    fi
+
+}
+
 # function to display help
 help() {
     echo "Spelling Bee instructions:"
-    echo "To study   : sbs ${YEAR}-scr-local-001-grade-1-8 word lary-frees"
+    echo "To study   : sbs ${YEAR}-scr-local-001-grade-1 word lary-frees"
     echo "To practice: sbp ${YEAR}-scr-region-001-latin-basic word lary-frees"
     echo "To test    : sbt ${YEAR}-scr-region-003-asian-languages-challenge chapter 1"
     echo "To revise  : sbr ${YEAR}-scr-region-001-latin-challenge random 50"
     echo "To scan    : sbe ${YEAR}-scr-region-001-latin-challenge"
     echo ""
 
-    echo "=========================================="
-    echo "Word lists for year ${YEAR}"
-    echo "=========================================="
-    echo ""
-
-    listcount=$(ls -1 $DATA/spelling_bee_${YEAR}*.txt 2>/dev/null | wc -l)
-    if [[ $listcount -gt 0 ]]; then
-        echo "Word lists:"
-        ls -1 $DATA/spelling_bee_${YEAR}*.txt | egrep -v "challenge" | sed 's/^.*spelling_bee_//g' | sed 's/.txt//g' | column -x
-        echo ""    
-    fi    
-    
-    listcount=$(ls -1 $DATA/spelling_bee_${YEAR}*-challenge.txt 2>/dev/null | wc -l)
-    if [[ $listcount -gt 0 ]]; then
-        echo "Challenge word lists:"
-        ls -1 $DATA/spelling_bee_${YEAR}*-challenge.txt | sed 's/^.*spelling_bee_//g' | sed 's/.txt//g' | column -x
-        echo ""
-    fi
-    
-    listcount=$(ls -1 $DATA/study/spelling_bee_practice_${YEAR}*.txt 2>/dev/null | wc -l)
-    if [[ $listcount -gt 0 ]]; then
-        echo "Practice word lists:"
-        ls -1 $DATA/study/spelling_bee_practice_${YEAR}*.txt | sed 's/^.*spelling_bee_//g' | sed 's/.txt//g' | column -x
-        echo ""
-    fi
-
-    echo "=========================================="
-    echo "Word lists for year 2016"
-    echo "=========================================="
-    echo ""
-
-    echo "Word lists:"
-    ls -1 $DATA/spelling_bee_2016*.txt | sed 's/^.*spelling_bee_//g' | sed 's/.txt//g' | column -x
-    echo ""
-    echo "Practice word lists:"
-    ls -1 $DATA/study/spelling_bee_practice_2016*.txt | sed 's/^.*spelling_bee_//g' | sed 's/.txt//g' | column -x
-    echo ""
-
+    # display word lists
+    for year in 2018 2017 2016
+    do
+        printlist ${year}
+    done
 }
 
 # display instructions
