--- a/spelling-bee/project_setup.cfg
+++ b/spelling-bee/project_setup.cfg
@@ -14,6 +14,20 @@ alias define="cd $PROJ; sudo python $PROJ/dictionary_lookup.py"
 
 # define functions
 
+# function to generate file filter for WinSCP from a list
+getfilefilter() {
+    list=$1
+    filter=""
+
+    for word in $(cat ${list} | sed '$a\')
+    do
+        filter=${filter}'*'${word}'.*,'
+    done
+
+    filter=$(echo "${filter}" | sed 's/,$//g')
+    echo ${filter}
+}
+
 # function to print word list for a year
 printlist() {
     printyear=$1
