Updated help function to reduce clutter

--- a/spelling-bee/project_setup.cfg
+++ b/spelling-bee/project_setup.cfg
@@ -33,7 +33,7 @@ printlist() {
     printyear=$1
 
     echo "=========================================="
-    echo "Word lists for year ${printyear}"
+    echo "Word lists for ${printyear}"
     echo "=========================================="
     echo ""
 
@@ -62,6 +62,11 @@ printlist() {
 
 # function to display help
 help() {
+    displayfilter="$1"
+    if [[ $displayfilter = "" ]]; then
+        displayfilter="2018 how-to-spell"
+    fi    
+
     echo "Spelling Bee instructions:"
     echo "To study   : sbs ${YEAR}-scr-local-001-grade-1 word lary-frees"
     echo "To practice: sbp ${YEAR}-scr-region-001-latin-basic word lary-frees"
@@ -71,7 +76,7 @@ help() {
     echo ""
 
     # display word lists
-    for year in 2018 2017 2016
+    for year in $displayfilter
     do
         printlist ${year}
     done
