Enhanced listing based on year and for rulebooks

--- a/spelling-bee/project_setup.cfg
+++ b/spelling-bee/project_setup.cfg
@@ -9,6 +9,7 @@ alias sbp="cd $PROJ; sudo python $PROJ/spelling_bee.py practice"
 alias sbt="cd $PROJ; sudo python $PROJ/spelling_bee.py test"
 alias sbr="cd $PROJ; sudo python $PROJ/spelling_bee.py revise"
 alias sbe="cd $PROJ; sudo python $PROJ/spelling_bee.py scan"
+alias sbm="cd $PROJ; sudo python $PROJ/spelling_bee.py master"
 
 alias define="cd $PROJ; sudo python $PROJ/dictionary_lookup.py"
 
@@ -37,24 +38,24 @@ printlist() {
     echo "=========================================="
     echo ""
 
-    listcount=$(ls -1 $DATA/spelling_bee_${printyear}*.txt 2>/dev/null | wc -l)
+    listcount=$(ls -1 $DATA/spelling_bee_*${printyear}*.txt 2>/dev/null | wc -l)
     if [[ $listcount -gt 0 ]]; then
         echo "Word lists:"
-        ls -1 $DATA/spelling_bee_${printyear}*.txt | egrep -v "challenge" | sed 's/^.*spelling_bee_//g' | sed 's/.txt//g' | column -x
+        ls -1 $DATA/spelling_bee_*${printyear}*.txt | egrep -v "challenge" | sed 's/^.*spelling_bee_//g' | sed 's/.txt//g' | column -x
         echo ""    
     fi    
     
-    listcount=$(ls -1 $DATA/spelling_bee_${printyear}*-challenge.txt 2>/dev/null | wc -l)
+    listcount=$(ls -1 $DATA/spelling_bee_*${printyear}*-challenge.txt 2>/dev/null | wc -l)
     if [[ $listcount -gt 0 ]]; then
         echo "Challenge word lists:"
-        ls -1 $DATA/spelling_bee_${printyear}*-challenge.txt | sed 's/^.*spelling_bee_//g' | sed 's/.txt//g' | column -x
+        ls -1 $DATA/spelling_bee_*${printyear}*-challenge.txt | sed 's/^.*spelling_bee_//g' | sed 's/.txt//g' | column -x
         echo ""
     fi
     
-    listcount=$(ls -1 $DATA/study/spelling_bee_practice_${printyear}*.txt 2>/dev/null | wc -l)
+    listcount=$(ls -1 $DATA/study/spelling_bee_practice_*${printyear}*.txt 2>/dev/null | wc -l)
     if [[ $listcount -gt 0 ]]; then
         echo "Practice word lists:"
-        ls -1 $DATA/study/spelling_bee_practice_${printyear}*.txt | sed 's/^.*spelling_bee_//g' | sed 's/.txt//g' | column -x
+        ls -1 $DATA/study/spelling_bee_practice_*${printyear}*.txt | sed 's/^.*spelling_bee_//g' | sed 's/.txt//g' | column -x
         echo ""
     fi
 
@@ -64,7 +65,7 @@ printlist() {
 help() {
     displayfilter="$1"
     if [[ $displayfilter = "" ]]; then
-        displayfilter="2018 how-to-spell"
+        displayfilter="2018 how-to-spell my-list rulebook"
     fi    
 
     echo "Spelling Bee instructions:"
