--- a/spelling-bee/project_setup.cfg
+++ b/spelling-bee/project_setup.cfg
@@ -65,7 +65,7 @@ printlist() {
 help() {
     displayfilter="$1"
     if [[ $displayfilter = "" ]]; then
-        displayfilter="2018 how-to-spell my-list rulebook"
+        displayfilter="2016 2017 2018 how-to-spell my-list rulebook"
     fi    
 
     echo "Spelling Bee instructions:"
