User profile and project config updates

--- a/spelling-bee/project_setup.cfg
+++ b/spelling-bee/project_setup.cfg
@@ -1,15 +1,18 @@
 # set shortcuts
 export PROJ=$(pwd)
 export DATA=$PROJ/data
-export YEAR=2018
+export YEAR=2019
 
 # set aliases
-alias sbs="cd $PROJ; sudo python $PROJ/spelling_bee.py study"
-alias sbp="cd $PROJ; sudo python $PROJ/spelling_bee.py practice"
-alias sbt="cd $PROJ; sudo python $PROJ/spelling_bee.py test"
-alias sbr="cd $PROJ; sudo python $PROJ/spelling_bee.py revise"
-alias sbe="cd $PROJ; sudo python $PROJ/spelling_bee.py scan"
-alias sbm="cd $PROJ; sudo python $PROJ/spelling_bee.py master"
+alias sbs="cd $PROJ; sudo python $PROJ/spelling_bee_beta19.py study"
+alias sbp="cd $PROJ; sudo python $PROJ/spelling_bee_beta19.py practice"
+alias sbt="cd $PROJ; sudo python $PROJ/spelling_bee_beta19.py test"
+alias sbr="cd $PROJ; sudo python $PROJ/spelling_bee_beta19.py revise"
+alias sbe="cd $PROJ; sudo python $PROJ/spelling_bee_beta19.py scan"
+alias sbm="cd $PROJ; sudo python $PROJ/spelling_bee_beta19.py master"
+
+alias download="cd $PROJ; sudo python spellit_download_log_overrides.py"
+alias resample="cd $PROJ; ksh spellit_resample_audio.ksh"
 
 alias define="cd $PROJ; sudo python $PROJ/dictionary_lookup.py"
 
@@ -22,11 +25,30 @@ getfilefilter() {
 
     for word in $(cat ${list} | sed '$a\')
     do
-        filter=${filter}'*'${word}'.*,'
+        filterext='*'${word}'.*,'
+
+        currlen=${#filter}
+        addlen=${#filterext}
+        nextlen=$((currlen + addlen))
+
+        if [[ $nextlen -gt 1000 ]]; then
+            filter=$(echo "${filter}" | sed 's/,$//g')
+            echo ${filter}
+            echo ""
+            filter=""
+        fi
+
+        filter=${filter}${filterext}
     done
 
     filter=$(echo "${filter}" | sed 's/,$//g')
-    echo ${filter}
+    currlen=${#filter}
+    if [[ $currlen -gt 0 ]]; then
+        echo ${filter}
+        echo ""
+        filter=""
+    fi
+
 }
 
 # function to print word list for a year
@@ -52,12 +74,12 @@ printlist() {
         echo ""
     fi
     
-    listcount=$(ls -1 $DATA/study/spelling_bee_practice_*${printyear}*.txt 2>/dev/null | wc -l)
-    if [[ $listcount -gt 0 ]]; then
-        echo "Practice word lists:"
-        ls -1 $DATA/study/spelling_bee_practice_*${printyear}*.txt | sed 's/^.*spelling_bee_//g' | sed 's/.txt//g' | column -x
-        echo ""
-    fi
+    #listcount=$(ls -1 $DATA/study/spelling_bee_practice_*${printyear}*.txt 2>/dev/null | wc -l)
+    #if [[ $listcount -gt 0 ]]; then
+        #echo "Practice word lists:"
+        #ls -1 $DATA/study/spelling_bee_practice_*${printyear}*.txt | sed 's/^.*spelling_bee_//g' | sed 's/.txt//g' | column -x
+        #echo ""
+    #fi
 
 }
 
@@ -65,7 +87,7 @@ printlist() {
 help() {
     displayfilter="$1"
     if [[ $displayfilter = "" ]]; then
-        displayfilter="2016 2017 2018 how-to-spell my-list rulebook"
+        displayfilter="2016 2017 2018 2019 how-to-spell my-list rulebook words-of-champs 2020"
     fi    
 
     echo "Spelling Bee instructions:"
@@ -80,6 +102,31 @@ help() {
     for year in $displayfilter
     do
         printlist ${year}
+    done
+}
+
+# function to display most recent log for a test
+showlog() {
+    logfile=$DATA/log/spelling_bee_tests.log
+    testname="$1"
+    endpattern="End of Test Log"
+
+    begln=$(($(sed -n "/^Spelling Bee ${testname}.*$/=" ${logfile} | sed '$!d') -1))
+    sed -n "${begln},/${endpattern}/p" ${logfile}
+    echo ""
+}
+
+# function to display all logs for a test
+showlogs() {
+    logfile=$DATA/log/spelling_bee_tests.log
+    testname="$1"
+    endpattern="End of Test Log"
+
+    for ln in $(sed -n "/^Spelling Bee ${testname}.*$/=" ${logfile})
+    do
+        begln=$((${ln} -1))
+        sed -n "${begln},/${endpattern}/p" ${logfile}
+        echo ""
     done
 }
 
