--- a/spelling-bee/project_setup.cfg
+++ b/spelling-bee/project_setup.cfg
@@ -1,15 +1,15 @@
 # set shortcuts
 export PROJ=$(pwd)
 export DATA=$PROJ/data
-export YEAR=2019
+export YEAR=2020
 
 # set aliases
-alias sbs="cd $PROJ; sudo python $PROJ/spelling_bee_beta19.py study"
-alias sbp="cd $PROJ; sudo python $PROJ/spelling_bee_beta19.py practice"
-alias sbt="cd $PROJ; sudo python $PROJ/spelling_bee_beta19.py test"
-alias sbr="cd $PROJ; sudo python $PROJ/spelling_bee_beta19.py revise"
-alias sbe="cd $PROJ; sudo python $PROJ/spelling_bee_beta19.py scan"
-alias sbm="cd $PROJ; sudo python $PROJ/spelling_bee_beta19.py master"
+alias sbs="cd $PROJ; sudo python $PROJ/spelling_bee.py study"
+alias sbp="cd $PROJ; sudo python $PROJ/spelling_bee.py practice"
+alias sbt="cd $PROJ; sudo python $PROJ/spelling_bee.py test"
+alias sbr="cd $PROJ; sudo python $PROJ/spelling_bee.py revise"
+alias sbe="cd $PROJ; sudo python $PROJ/spelling_bee.py scan"
+alias sbm="cd $PROJ; sudo python $PROJ/spelling_bee.py master"
 
 alias download="cd $PROJ; sudo python spellit_download_log_overrides.py"
 alias resample="cd $PROJ; ksh spellit_resample_audio.ksh"
