--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,15 @@
 ######################
 *.bkp
 
+# Test Data and Scripts#
+######################
+*.html
+*.xml
+*TEST*
+*CONTROL*
+*DONOTUSE*
+*TODELETE*
+
 # OS generated files #
 ######################
 .DS_Store
