Updates for Python3

--- a/spelling-bee/project_setup.cfg
+++ b/spelling-bee/project_setup.cfg
@@ -4,17 +4,17 @@ export DATA=$PROJ/data
 export YEAR=2020
 
 # set aliases
-alias sbs="cd $PROJ; sudo python $PROJ/spelling_bee.py study"
-alias sbp="cd $PROJ; sudo python $PROJ/spelling_bee.py practice"
-alias sbt="cd $PROJ; sudo python $PROJ/spelling_bee.py test"
-alias sbr="cd $PROJ; sudo python $PROJ/spelling_bee.py revise"
-alias sbe="cd $PROJ; sudo python $PROJ/spelling_bee.py scan"
-alias sbm="cd $PROJ; sudo python $PROJ/spelling_bee.py master"
+alias sbs="cd $PROJ; sudo python3 $PROJ/spelling_bee.py study"
+alias sbp="cd $PROJ; sudo python3 $PROJ/spelling_bee.py practice"
+alias sbt="cd $PROJ; sudo python3 $PROJ/spelling_bee.py test"
+alias sbr="cd $PROJ; sudo python3 $PROJ/spelling_bee.py revise"
+alias sbe="cd $PROJ; sudo python3 $PROJ/spelling_bee.py scan"
+alias sbm="cd $PROJ; sudo python3 $PROJ/spelling_bee.py master"
 
-alias download="cd $PROJ; sudo python spellit_download_log_overrides.py"
+alias download="cd $PROJ; sudo python3 spellit_download_log_overrides.py"
 alias resample="cd $PROJ; ksh spellit_resample_audio.ksh"
 
-alias define="cd $PROJ; sudo python $PROJ/dictionary_lookup.py"
+alias define="cd $PROJ; sudo python3 $PROJ/dictionary_lookup.py"
 
 # define functions
 
@@ -128,6 +128,21 @@ showlogs() {
         sed -n "${begln},/${endpattern}/p" ${logfile}
         echo ""
     done
+}
+
+# function to display most recent test result
+showresult() {
+    logfile=$DATA/log/spelling_bee_current_test.log
+    column ${logfile}
+    echo ""
+}
+
+# function to display errors from most recent test result
+showerrors() {
+    logfile=$DATA/log/spelling_bee_current_test.log
+    head -3 ${logfile}
+    egrep "^X" ${logfile} | column
+    echo ""
 }
 
 # display instructions
