Added support for Spell Pundit

--- a/spelling-bee/project_setup.cfg
+++ b/spelling-bee/project_setup.cfg
@@ -87,7 +87,7 @@ printlist() {
 help() {
     displayfilter="$1"
     if [[ $displayfilter = "" ]]; then
-        displayfilter="2016 2017 2018 2019 how-to-spell my-list rulebook words-of-champs 2020"
+        displayfilter="2016 2017 2018 2019 how-to-spell my-list rulebook words-of-champs spell-pundit 2020"
     fi    
 
     echo "Spelling Bee instructions:"
